2021-02-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (ee-find-pdftotext-text): added a comment
	explaining how to use UTF-8 instead of Latin-1.

2021-02-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-eww): new function.

	* eev-brxxx.el (ee-code-brurl-:remote, ee-code-brurl-:local)
	(ee-code-brfile-:local): commented out the `(setq
	browse-url-browser-function ...)'s in the generated code - they
	are not needed in eev anymore and people who use `browse-url' find
	them annoying.
	(ee-code-brurl, ee-code-brfile): added help links to the generated
	code.
	(brew, brewl, brewd, breww, brewwl, brewwd): new functions.

	* eev-intro.el (find-eev-intro): promoted `(find-videos-intro)' to
	the list of basic intros.
	(find-eev-quick-intro): fixed a typo in the section "1. Installing
	eev": the "eev-" in `M-x eev-beginner' was missing.
	(find-eev-install-intro): added the line `(autoload 'eev-beginner
	"eev-beginner")' to some installation instructions.

2021-02-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-template0.el (ee-template00-re): new variable.
	(ee-template00): use `ee-template00-re'.

2021-01-24  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-refining-intro): rewrote the section "5.
	Pointing to anchors".

2021-01-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eepitch-intro): new section: "3.2. Test
	blocks as documentation".

2021-01-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-audiovideo-intro): rewrote the section "4.
	Short hyperlinks to audio and video files".

2021-01-11  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-testblocks.el (ee-insert-test-scheme-mode): new function.

2021-01-02  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev.el: bumped the version. Changed the "Package-Requires" to
	Emacs 24.4 because of the new `advice-add' used by `find-man'.

	* eev-pkg.el: same.

	* eev-intro.el (find-audiovideo-intro): new section: "7.2.
	`find-eevvideo-links'".
