@@ -1,3 +1,8 @@
+2021-02-26  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-elinks.el (ee-find-grep-links1): new function.
+	(ee-find-grep-links): use `ee-find-grep-links1'.
+
 2021-02-23  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-pdflike.el (ee-find-pdftotext-text): added a comment
